--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -16,48 +16,49 @@ jobs:
       - name: Efetua checkout da branch
         uses: actions/checkout@v3
 
-#      - name: Setup Ruby
-#        uses: actions/setup-ruby@v1
-#        with:
-#          ruby-version: 2.7
+      - name: Setup Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.7
 
-#      - name: Install SSH key
-#        uses: shimataro/ssh-key-action@v2
-#        with:
-#          key: ${{ secrets.SSH_PRIVATE_KEY }}
-#          name: id_rsa
-#          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          name: id_rsa
+          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
 
       - name: Setup Fastlane
         run: |
           cd android
           bundle install
 
-#      - name: Setup Java
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'temurin' # See 'Supported distributions' for available options
-#          java-version: '17'
-
-#      - name: Setup flutter e builda projeto
-#        uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version: '3.10.6'
-#          channel: 'stable'
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#      - run: flutter --version
-#      - run: flutter pub get
-#      - run: ./localization
-#      - run: flutter packages pub run build_runner build --delete-conflicting-outputs
-#      - run: flutter build ipa --export-options-plist ios/export/info_dev.plist --flavor dev -t lib/core/flavors/main_dev.dart -v
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
 
       - name: Setup flutter e builda projeto
-        run: |
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.10.6'
+          channel: 'stable'
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
           flutter clean
           flutter pub get
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
           flutter build apk --debug --flavor dev -t lib/core/flavors/main_dev.dart 
+
+#      - name: Setup flutter e builda projeto LOCALMENTE
+#        run: |
+#          flutter clean
+#          flutter pub get
+#          ./localization
+#          flutter packages pub run build_runner build --delete-conflicting-outputs
+#          flutter build apk --debug --flavor dev -t lib/core/flavors/main_dev.dart
 
       - name: Upload do apk
         uses: actions/upload-artifact@v3
