--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -10,7 +10,8 @@ jobs:
       checks: write
       contents: write
       packages: write
-    runs-on: [marcOS]
+#    runs-on: [marcOS]
+    runs-on: macos-latest
 
     steps:
       - name: Efetua checkout da branch
@@ -72,7 +73,8 @@ jobs:
       checks: write
       contents: write
       packages: write
-    runs-on: [ marcOS ]
+#    runs-on: [ marcOS ]
+    runs-on: macos-latest
 
     steps:
       - name: Download apk
