--- a/.github/workflows/distribution_dev.yaml
+++ b/.github/workflows/distribution_dev.yaml
@@ -25,7 +25,8 @@ jobs:
       checks: write
       contents: write
       packages: write
-    runs-on: [ marcOS ]
+#    runs-on: [ marcOS ]
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
