--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -11,7 +11,7 @@ jobs:
       contents: write
       packages: write
 #    runs-on: [marcOS]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Efetua checkout da branch
