--- a/.github/workflows/distribution_dev.yaml
+++ b/.github/workflows/distribution_dev.yaml
@@ -26,7 +26,7 @@ jobs:
       contents: write
       packages: write
 #    runs-on: [ marcOS ]
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
