--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -40,12 +40,10 @@ jobs:
           flutter packages pub run build_runner build --delete-conflicting-outputs
           flutter analyze --no-fatal-infos --no-fatal-warnings
           flutter test --coverage
-          sudo apt install libperlio-gzip-perl libjson-perl
-          wget "https://github.com/linux-test-project/lcov/archive/master.zip"
-          unzip "master.zip"
-          cd "lcov-master"
-          sudo make install
-          cd ..
+          
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - run: |
           lcov --remove coverage/lcov.info 'lib/core/*' -o coverage/new_lcov.info
           lcov --remove coverage/new_lcov.info '**/strings/localization/**' -o coverage/new2_lcov.info
           flutter test --machine > test-results.json
