--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -18,9 +18,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Ruby
-      - uses: ruby/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-        ruby-version: '2.7'
+          ruby-version: '2.7'
 
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
