altera a versão do ruby no workflow do ios

--- a/.github/workflows/ios_distribution_dev.yaml
+++ b/.github/workflows/ios_distribution_dev.yaml
@@ -109,9 +109,9 @@ jobs:
           path: build/ios/ipa
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: '2.7'
 
       - name: Setup Fastlane
         run: |
@@ -150,9 +150,9 @@ jobs:
           path: build/ios/ipa
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: '2.7'
 
       - name: Setup Fastlane
         run: |
