--- a/.github/workflows/ios_distribution_dev.yaml
+++ b/.github/workflows/ios_distribution_dev.yaml
@@ -102,6 +102,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Efetua checkout da branch
+        uses: actions/checkout@v3
+
       - name: Download ipa
         uses: actions/download-artifact@v3
         with:
@@ -143,6 +146,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Efetua checkout da branch
+        uses: actions/checkout@v3
+
       - name: Download ipa
         uses: actions/download-artifact@v3
         with:
