--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,12 +60,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Apertura
+      fonts:
+        - asset: assets/fonts/Apertura-MediumCondensed.otf
+#        - asset: assets/fonts/Apertura-Bold.otf
+#          weight: 400
+#        - asset: assets/fonts/Apertura-BoldCondensed.otf
+#          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
