--- a/.github/workflows/tests_local.yaml
+++ b/.github/workflows/tests_local.yaml
@@ -1,19 +1,14 @@
-name: CI Tests
+name: CI Tests LOCAL
 
 on:
   workflow_dispatch:
   workflow_call:
 
-  push:
-    branches:
-      - '*'
-      - '!main'
-
 jobs:
   flutter_test:
     name: Flutter Tests
     runs-on: [marcOS]
-#    runs-on: ubuntu-latest
+
     permissions:
       checks: write
       contents: write
@@ -21,32 +16,6 @@ jobs:
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
-
-#      - name: Setup Java
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'temurin' # See 'Supported distributions' for available options
-#          java-version: '17'
-
-#      - name: Setup flutter and build project
-#        uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version: '3.10.6'
-#          channel: 'stable'
-#      - run: |
-#          flutter --version
-#          flutter pub get
-#          ./localization
-#          flutter packages pub run build_runner build --delete-conflicting-outputs
-#          flutter analyze --no-fatal-infos --no-fatal-warnings
-#          flutter test --coverage
-#
-#      - name: Setup LCOV
-#        uses: hrishikesh-kadam/setup-lcov@v1
-#      - run: |
-#          lcov --remove coverage/lcov.info 'lib/core/*' -o coverage/new_lcov.info
-#          lcov --remove coverage/new_lcov.info '**/strings/localization/**' -o coverage/new2_lcov.info
-#          flutter test --machine > test-results.json
 
       - name: Setup flutter and build project LOCAL
         run: |
