--- a/.github/workflows/android_distribution_local.yaml
+++ b/.github/workflows/android_distribution_local.yaml
@@ -33,6 +33,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           name: id_rsa
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+          if_key_exists: ignore
 
       - name: Setup Fastlane
         run: |
