atualiza o ruby dos workflows

--- a/.github/workflows/android_distribution_dev.yaml
+++ b/.github/workflows/android_distribution_dev.yaml
@@ -21,6 +21,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
+      - run: ruby hello.rb
 
 #      - name: Setup Ruby TO MACOS
 #        uses: actions/setup-ruby@v1
@@ -95,6 +96,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
+      - run: ruby hello.rb
 
       - name: Setup Fastlane
         run: |
