adiciona comandos para atualizar o cocoapods no workflow do ios
adiciona comandos para atualizar o cocoapods no workflow do ios

--- a/.github/workflows/ios_distribution_dev.yaml
+++ b/.github/workflows/ios_distribution_dev.yaml
@@ -68,6 +68,7 @@ jobs:
           ./localization
           flutter packages pub run build_runner build --delete-conflicting-outputs
           cd ios
+          gem update cocoapods
           pod deintegrate
           pod install
           cd ..
