--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,24 +21,32 @@ dependencies:
   firebase_analytics: ^10.4.4
   firebase_crashlytics: ^3.3.4
   get_it: ^7.6.0
-  auto_route: ^7.8.0
+  auto_route: ^8.1.3
   intl: ^0.19.0
   mockito: ^5.4.2
   flutter_native_splash: ^2.3.2
-  device_info_plus: ^9.0.3
+  device_info_plus: ^10.1.0
   firebase_performance: ^0.9.2+5
   flutter_svg: ^2.0.7
+  flutter_facebook_auth: ^6.0.4
+  retrofit_generator: ^8.1.0
+  dio: ^5.4.3+1
+  curl_logger_dio_interceptor: ^1.0.0
+  json_annotation: ^4.9.0
+  retrofit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   flutter_flavorizr: ^2.2.1
-  auto_route_generator: ^7.3.0
+  auto_route_generator: ^8.0.0
   build_runner: ^2.4.6
 
 flutter:
+
+  generate: true
 
   uses-material-design: true
 
