--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,21 +14,21 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.7.2
-  firebase_core: ^2.15.0
+  firebase_auth: ^5.0.0
+  firebase_core: ^3.0.0
   google_sign_in: ^6.1.4
   flutter_dotenv: ^5.1.0
-  firebase_analytics: ^10.4.4
-  firebase_crashlytics: ^3.3.4
+  firebase_analytics: ^11.0.0
+  firebase_crashlytics: ^4.0.0
   get_it: ^7.6.0
   auto_route: ^8.1.3
   intl: ^0.19.0
   mockito: ^5.4.2
   flutter_native_splash: ^2.3.2
   device_info_plus: ^10.1.0
-  firebase_performance: ^0.9.2+5
+  firebase_performance: ^0.10.0
   flutter_svg: ^2.0.7
-  flutter_facebook_auth: ^6.0.4
+  flutter_facebook_auth: ^7.0.0
   retrofit_generator: ^8.1.0
   dio: ^5.4.3+1
   curl_logger_dio_interceptor: ^1.0.0
@@ -43,6 +43,7 @@ dev_dependencies:
   flutter_flavorizr: ^2.2.1
   auto_route_generator: ^8.0.0
   build_runner: ^2.4.6
+  json_serializable: ^6.8.0
 
 flutter:
 
