--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   curl_logger_dio_interceptor: ^1.0.0
   json_annotation: ^4.9.0
   retrofit: ^4.1.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
