--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   json_annotation: ^4.9.0
   retrofit: ^4.1.0
   flutter_secure_storage: ^9.2.2
+  convenient_test: ^1.3.7
 
 dev_dependencies:
   flutter_test:
