--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   auto_route_generator: ^8.0.0
   build_runner: ^2.4.6
   json_serializable: ^6.8.0
+  firebase_core_platform_interface: ^5.1.0
 
 flutter:
 
