--- a/ios/Runner/dev/GoogleService-Info.plist
+++ b/ios/Runner/dev/GoogleService-Info.plist
@@ -32,5 +32,10 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:106395996253:ios:fa86692c5f4dffcd03bdb4</string>
+
+	<key>NSCameraUsageDescription</key>
+    <string>We need access to the camera to take photos.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to the photo library to select photos.</string>
 </dict>
 </plist>
