--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   retrofit: ^4.1.0
   flutter_secure_storage: ^9.2.2
   convenient_test: ^1.3.7
+  image_picker: ^1.1.2
+  camera: ^0.11.0+1
 
 dev_dependencies:
   flutter_test:
