--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,15 +78,14 @@ flutter:
     - family: Apertura
       fonts:
         - asset: assets/fonts/Apertura-MediumCondensed.otf
-  #        - asset: assets/fonts/Apertura-Bold.otf
-  #          weight: 400
-  #        - asset: assets/fonts/Apertura-BoldCondensed.otf
-  #          weight: 700
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: Heebo
+      fonts:
+        - asset: assets/fonts/heebo/Heebo-Regular.ttf
+        - asset: assets/fonts/heebo/Heebo-Bold.ttf
+          weight: 700
+    - family: Blanch
+      fonts:
+        - asset: assets/fonts/BLANCH-CAPS.OTF
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
