--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -35,6 +35,16 @@
 		</array>
 		<key>CFBundleVersion</key>
 		<string>1</string>
+		<key>LSApplicationQueriesSchemes</key>
+        <array>
+            <string>http</string>
+            <string>https</string>
+        </array>
+        <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSAllowsArbitraryLoads</key>
+            <true/>
+        </dict>
 		<key>ITSAppUsesNonExemptEncryption</key>
 		<false/>
 		<key>LSRequiresIPhoneOS</key>
@@ -63,7 +73,7 @@
 		<key>UIStatusBarHidden</key>
 		<false/>
 
-		<key>NSCameraUsageDescription</key>
+        <key>NSCameraUsageDescription</key>
         <string>We need access to the camera to take photos.</string>
         <key>NSPhotoLibraryUsageDescription</key>
         <string>We need access to the photo library to select photos.</string>
