--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   convenient_test: ^1.3.7
   image_picker: ^1.1.2
   camera: ^0.11.0+1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
