--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   camera: ^0.11.0+1
   url_launcher: ^6.3.0
   audioplayers: ^6.0.0
+  just_audio: ^0.9.39
 
 dev_dependencies:
   flutter_test:
