--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>106395996253-1o0qdh69ns2ttodsflvjth1n59j5sadr.apps.googleusercontent.com</string>
+	<string>106395996253-47re9j5qpusudfhvpfc8r3n9u8a86d76.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.106395996253-1o0qdh69ns2ttodsflvjth1n59j5sadr</string>
+	<string>com.googleusercontent.apps.106395996253-47re9j5qpusudfhvpfc8r3n9u8a86d76</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>106395996253-08bcto7ojojf3aqhnosen8l2dfvq4p8e.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>eumedito.org.cincoMinutos</string>
+	<string>eumedito.org.cincoMinutos.dev</string>
 	<key>PROJECT_ID</key>
 	<string>minutos-3ae7f</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:106395996253:ios:aae3ffe9c1d3a56803bdb4</string>
+	<string>1:106395996253:ios:fa86692c5f4dffcd03bdb4</string>
 
 	<key>NSCameraUsageDescription</key>
     <string>We need access to the camera to take photos.</string>
