--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -78,5 +78,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCalendarsUsageDescription</key>
+    <string>Precisamos de acesso ao seu calendário para criar eventos.</string>
 </dict>
 </plist>
