--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   url_launcher: ^6.3.0
   audioplayers: ^6.0.0
   just_audio: ^0.9.39
+  device_calendar: ^4.3.2
+  timezone: ^0.9.4
+  manage_calendar_events: ^2.0.3
+  add_2_calendar: ^3.0.1
 
 dev_dependencies:
   flutter_test:
