ajusta o workflow do ios de produção para pegar as chaves corretas do math

--- a/.github/workflows/ios_distribution_prod.yaml
+++ b/.github/workflows/ios_distribution_prod.yaml
@@ -1,4 +1,4 @@
-name: iOS distribution Dev
+name: iOS distribution PROD
 
 on:
   workflow_dispatch:
@@ -40,13 +40,15 @@ jobs:
           cd ios
           bundle exec fastlane download_keys
         env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_ID: ${{ secrets.APPLE_ID_PROD }}
           FASTLANE_PASSWORD: ${{ secrets.FASTLANE_PASSWORD }}
           APP_STORE_CONNECT_APPLE_ID: ${{ secrets.APP_STORE_CONNECT_APPLE_ID }}
           FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
           MATCH_KEYCHAIN_PASSWORD: ${{ secrets.MATCH_KEYCHAIN_PASSWORD }}
           MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
+          APP_STORE_ISSUER_ID: ${{ secrets.APP_STORE_ISSUER_ID }}
+          APP_STORE_KEY_ID: ${{ secrets.APP_STORE_KEY_ID }}
 
       - name: Setup Java
         uses: actions/setup-java@v3
