altera a lane no actios para pegar a de produção

--- a/ios/fastlane/.env
+++ b/ios/fastlane/.env
@@ -11,4 +11,5 @@ PROFILE_APP_STORE  = "5minutosDevDistProfile"
 PROFILE_AD_HOC     = "5minutosDevHocProfile"
 
 FIREBASE_APP_ID_IOS = "1:106395996253:ios:fa86692c5f4dffcd03bdb4"
+FIREBASE_APP_ID_IOS_PROD = "1:106395996253:ios:310bf8e16de1457e03bdb4"
 FIREBASE_TESTER_GROUPS    = "testers"
