adiciona todo fluxo local como manual

--- a/.github/workflows/android_distribution_prod_local.yaml
+++ b/.github/workflows/android_distribution_prod_local.yaml
@@ -1,9 +1,8 @@
 name: Android distribution Production LOCAL
 
 on:
-  push:
-    branches:
-      - 'main'
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
