--- a/.github/workflows/android_distribution_store_local.yaml
+++ b/.github/workflows/android_distribution_store_local.yaml
@@ -1,9 +1,8 @@
 name: Android distribution Store LOCAL
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'  # Padrão para tags no formato v0.0.0
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
